--- a/src/app/settings-modal/settings-modal.component.html
+++ b/src/app/settings-modal/settings-modal.component.html
@@ -14,9 +14,9 @@
             </ng-template>
           </li>
           <li ngbNavItem="minimum-payout" [destroyOnHide]="true">
-            <a class="text-decoration-none" ngbNavLink>Set min payout</a>
+            <a class="text-decoration-none" ngbNavLink>Payouts</a>
             <ng-template ngbNavContent>
-              <app-update-minimum-payout></app-update-minimum-payout>
+              <app-update-payout-options></app-update-payout-options>
             </ng-template>
           </li>
           <li ngbNavItem="difficulty" [destroyOnHide]="true">
