--- a/src/app/harvester-card/harvester-card.component.scss
+++ b/src/app/harvester-card/harvester-card.component.scss
@@ -4,6 +4,9 @@
 .shares-chart {
   height: 15rem;
 }
+.proof-times-chart {
+  height: 15rem;
+}
 .dark-background {
   background-color: #262629;
   color: #cfd0d1;
