--- a/src/app/update-notification-settings/update-notification-settings.component.html
+++ b/src/app/update-notification-settings/update-notification-settings.component.html
@@ -33,6 +33,23 @@
     </div>
   </div>
 </div>
+<div class="row mt-3">
+  <div class="col-12">
+    <div class="form-group">
+      <label for="harvesterOfflineDuration" class="form-label">
+        <div class="form-check form-switch">
+          <input class="form-check-input" type="checkbox" role="switch" id="enableHarvesterOfflineNotifications" [(ngModel)]="areHarvesterOfflineNotificationsEnabled">
+          <label class="form-check-label text-color-and-size" for="enableHarvesterOfflineNotifications" style="display: inline">
+            Notify when a Harvester does not send any partials for
+          </label>
+        </div>
+      </label>
+      <div class="duration-slider-wrapper">
+        <ngx-slider class="duration-slider" id="harvesterOfflineDuration" [(value)]="newHarvesterOfflineDurationInMinutes" [options]="harvesterOfflineDurationOptions"></ngx-slider>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="row mt-4">
   <div class="col-12">
     <div class="form-check form-switch" style="padding-bottom: 1rem">
