--- a/src/app/update-notification-settings/update-notification-settings.component.scss
+++ b/src/app/update-notification-settings/update-notification-settings.component.scss
@@ -21,3 +21,10 @@ input[type=number] {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
+
+.duration-slider {
+  margin-top: 0.5rem;
+}
+.duration-slider-wrapper {
+  margin-right: 12px;
+}
