--- a/src/app/update-notification-settings/update-notification-settings.component.scss
+++ b/src/app/update-notification-settings/update-notification-settings.component.scss
@@ -22,9 +22,7 @@ input[type=number] {
   border-bottom-left-radius: 0;
 }
 
-.duration-slider {
-  margin-top: 0.5rem;
-}
 .duration-slider-wrapper {
   margin-right: 12px;
+  margin-bottom: 1.25rem;
 }
