--- a/src/app/update-notification-settings/update-notification-settings.component.html
+++ b/src/app/update-notification-settings/update-notification-settings.component.html
@@ -45,7 +45,7 @@
         </div>
       </label>
       <div class="duration-slider-wrapper">
-        <ngx-slider class="duration-slider" id="harvesterOfflineDuration" [(value)]="newHarvesterOfflineDurationInMinutes" [options]="harvesterOfflineDurationOptions"></ngx-slider>
+        <ngx-slider id="harvesterOfflineDuration" [(value)]="newHarvesterOfflineDurationInMinutes" [options]="harvesterOfflineDurationOptions"></ngx-slider>
       </div>
     </div>
   </div>
