--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -15,6 +15,14 @@
     </div>
   </div>
   <div class="col-12" *ngIf="accountService.havePoolPublicKey && accountService.haveAccount">
+    <div *ngIf="accountHasNeverSubmittedAPartial || showNewAccountFarmingAlert" class="row ps-2 pe-2">
+      <ngb-alert *ngIf="accountHasNeverSubmittedAPartial" type="primary" class="mb-1 text-center" [dismissible]="false">
+        {{accountHasNeverSubmittedPartialsAlertMessage}}
+      </ngb-alert>
+      <ngb-alert *ngIf="!accountHasNeverSubmittedAPartial && showNewAccountFarmingAlert" type="primary" class="mb-1 text-center" (closed)="hideNewAccountInfoAlert()">
+        You just started farming, it will take 24h to show accurate estimations based on farm size.
+      </ngb-alert>
+    </div>
     <div class="row mb-1">
       <div class="col-12 col-md">
         <div>
