Fix margin of share box container and title

--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -223,10 +223,10 @@
               <div class="p-1 col-md-12">
                 <div echarts [options]="ecChartOptions" [merge]="ecChartUpdateOptions" theme="default" class="ec-chart"></div>
               </div>
-              <div class="row mt-2 text-align-center">
+              <div class="row mt-2 text-align-center ms-0 me-0">
                 <h5 style="font-weight: bold">Shares</h5>
               </div>
-              <div class="row ps-5 pe-3 justify-content-center">
+              <div class="row justify-content-center ms-0 me-0 shares-box-container">
                 <div class="col-12 col-sm-4 col-xxxxl-6 shares-box">
                   <div class="p-2 border border-primary rounded">
                     <h5 class="mb-1 fw-lighter">Valid Shares</h5>
