--- a/src/app/my-farmer/my-farmer.component.scss
+++ b/src/app/my-farmer/my-farmer.component.scss
@@ -64,6 +64,10 @@
   background-color: unset;
   border-color: #007bff;
 }
+.shares-box-container {
+  padding-left: 2.25rem;
+  padding-right: .3rem;
+}
 .shares-box-percentage {
   font-size: 16px;
 }
