--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -81,6 +81,12 @@
           <h5 [ngClass]="gigahorseVersionColorClasses">{{gigahorseVersion}}</h5>
         </div>
       </div>
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasCompressionAlphaVersion">
+        <div class="p-2 border border-primary rounded text-center">
+          <div class="mb-1">Compression Version</div>
+          <h5 [ngClass]="compressionAlphaVersionColorClasses">{{compressionAlphaVersion}}</h5>
+        </div>
+      </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasFoxyFarmerVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Foxy-Farmer Version</div>
