--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -29,65 +29,65 @@
   </div>
   <div class="card-body harvester-card">
     <div class="row" [ngClass]="rowColumnClasses">
-      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Valid Shares</div>
           <app-loading-state *ngIf="isLoading | async" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
           <h5 *ngIf="(isLoading | async) === false">{{totalValidShares | async}} ({{totalValidSharesPercentage | async}}%)</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Stale Shares</div>
           <app-loading-state *ngIf="isLoading | async" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
           <h5 *ngIf="(isLoading | async) === false" [ngClass]="staleSharesColorClasses | async">{{totalStaleShares | async}} ({{totalStaleSharesPercentage | async}}%)</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Average EC</div>
           <app-loading-state *ngIf="isLoading | async" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
           <h5 *ngIf="(isLoading | async) === false">{{averageEc | async}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Average proof time</div>
           <app-loading-state *ngIf="isLoading | async" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
           <h5 *ngIf="(isLoading | async) === false" [ngClass]="averageProofTimeInSecondsColorClass | async">{{averageProofTimeInSeconds | async}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Last Partial accepted</div>
           <h5>{{lastAcceptedPartialAt}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Chia Version</div>
           <h5 [ngClass]="chiaVersionColorClasses">{{chiaVersion}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasOgVersion">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasOgVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">OG Version</div>
           <h5 [ngClass]="ogVersionColorClasses">{{ogVersion}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasGigahorseVersion">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasGigahorseVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Gigahorse Version</div>
           <h5 [ngClass]="gigahorseVersionColorClasses">{{gigahorseVersion}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasCompressionAlphaVersion">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasCompressionAlphaVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Compression Version</div>
           <h5 [ngClass]="compressionAlphaVersionColorClasses">{{compressionAlphaVersion}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl p-1" *ngIf="hasFoxyFarmerVersion">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasFoxyFarmerVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Foxy-Farmer Version</div>
           <h5 [ngClass]="foxyFarmerVersionColorClasses">{{foxyFarmerVersion}}</h5>
