--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -81,10 +81,10 @@
           <h5 [ngClass]="gigahorseVersionColorClasses">{{gigahorseVersion}}</h5>
         </div>
       </div>
-      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasCompressionAlphaVersion">
+      <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasChiaCompressionVersion">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Compression Version</div>
-          <h5 [ngClass]="compressionAlphaVersionColorClasses">{{compressionAlphaVersion}}</h5>
+          <h5 [ngClass]="chiaCompressionVersionColorClasses">{{chiaCompressionVersion}}</h5>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasFoxyFarmerVersion">
