--- a/src/app/harvester-card/harvester-card.component.html
+++ b/src/app/harvester-card/harvester-card.component.html
@@ -66,7 +66,7 @@
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1">
         <div class="p-2 border border-primary rounded text-center">
           <div class="mb-1">Chia Version</div>
-          <h5 [ngClass]="chiaVersionColorClasses">{{chiaVersion}}</h5>
+          <h5 [ngClass]="chiaVersionColorClasses">{{fullChiaVersionString}}</h5>
         </div>
       </div>
       <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl col-xxl col-xxxl col-xxxxl col-xxxxxl p-1" *ngIf="hasOgVersion">
