--- a/src/app/currency-selector/currency-selector.component.html
+++ b/src/app/currency-selector/currency-selector.component.html
@@ -3,6 +3,6 @@
     <option *ngFor="let currency of ratesService.currencies" [ngValue]="currency" class="currency-select-option">{{ currency.toUpperCase() }}</option>
   </select>
   <label class="input-group-text dark-background currency-select-rate-label hide-on-smaller-screens">
-    1 {{(statsService.poolConfig | async).ticker?.toUpperCase()}} ≈ {{rateForCurrencyFormatted | async}}
+    1 {{(statsService.ticker$ | async)?.toUpperCase()}} ≈ {{rateForCurrencyFormatted | async}}
   </label>
 </div>
