--- a/src/app/update-difficulty/update-difficulty.component.html
+++ b/src/app/update-difficulty/update-difficulty.component.html
@@ -36,7 +36,7 @@
     <button type="button" class="btn btn-success w-100" (click)="updateDifficulty()" [disabled]="!canUpdateDifficulty">
       <span *ngIf="accountService.isUpdatingAccount">Updating</span>
       <span *ngIf="!accountService.isUpdatingAccount">Update difficulty</span>
-      <fa-icon [icon]="faCircleNotch" [spin]="true" *ngIf="accountService.isUpdatingAccount" style="margin-top: 5px; margin-left: 0.8em"></fa-icon>
+      <fa-icon [icon]="faCircleNotch" animation="spin" *ngIf="accountService.isUpdatingAccount" style="margin-top: 5px; margin-left: 0.8em"></fa-icon>
     </button>
   </div>
 </div>
