--- a/src/app/blocks-won/blocks-won.component.html
+++ b/src/app/blocks-won/blocks-won.component.html
@@ -23,20 +23,20 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngIf="!rewardStats.recentlyWonBlocks">
+      <tr *ngIf="(statsService.rewardStats$ | async) === null">
         <td colspan="7" style="text-align: center">
           <app-loading-state></app-loading-state>
         </td>
       </tr>
-      <tr *ngIf="rewardStats.recentlyWonBlocks && recentlyWonBlocks.length === 0">
+      <tr *ngIf="(statsService.rewardStats$ | async)?.recentlyWonBlocks.length === 0">
         <td colspan="7" style="text-align: center; padding-top: 1rem">
           <app-empty-state [text]="snippetService.getSnippet('blocks-won-component.no-blocks-won-yet')" [icon]="faCubes"></app-empty-state>
         </td>
       </tr>
       <tr *ngFor="let block of recentlyWonBlocks | slice: (page - 1) * pageSize : page * pageSize; trackBy: trackBy">
         <td class="no-wrap">{{getBlockDate(block)}}</td>
-        <td *ngIf="poolConfig.blockExplorerBlockUrlTemplate"><a href="{{getBlockExplorerBlockLink(block)}}" target="_blank" style="color: #b45bff">{{block.height}}</a></td>
-        <td *ngIf="!poolConfig.blockExplorerBlockUrlTemplate">{{block.height}}</td>
+        <td *ngIf="(statsService.poolConfig$ | async).blockExplorerBlockUrlTemplate"><a href="{{getBlockExplorerBlockLink(block)}}" target="_blank" style="color: #b45bff">{{block.height}}</a></td>
+        <td *ngIf="!(statsService.poolConfig$ | async).blockExplorerBlockUrlTemplate">{{block.height}}</td>
         <td class="no-wrap">{{block.networkSpaceInTib ? getFormattedCapacityFromTiB(block.networkSpaceInTib) : snippetService.getSnippet('general.not-available.short')}}</td>
         <td class="no-wrap"><span [class]="getEffortColor(block)">{{getBlockEffort(block)}}</span></td>
         <td class="ellipsis" *ngIf="block.winner.accountReference">
@@ -45,10 +45,10 @@
         <td class="ellipsis" *ngIf="!block.winner.accountReference">
           {{block.winner.name || block.winner.payoutAddress || snippetService.getSnippet('general.unknown')}}
         </td>
-        <td class="no-wrap">{{block.reward}} {{poolConfig.ticker}}</td>
+        <td class="no-wrap">{{block.reward}} {{(statsService.poolConfig$ | async).ticker}}</td>
         <td class="no-wrap" [style.padding-top]="block.distributed ? '12px' : '2px'" [style.padding-bottom]="block.distributed ? '12px' : '8px'">
           {{getBlockDistributedLabel(block)}}
-          <span *ngIf="!block.distributed">({{getBlockConfirms(block)}} / {{poolConfig.blockRewardDistributionDelay}})</span>
+          <span *ngIf="!block.distributed">({{getBlockConfirms(block)}} / {{(statsService.poolConfig$ | async).blockRewardDistributionDelay}})</span>
           <ngb-progressbar *ngIf="!block.distributed" [striped]="true" [animated]="true" [type]="getBlockProgressType(block)" [value]="getBlockProgress(block)"></ngb-progressbar>
         </td>
       </tr>
