--- a/src/app/farmer-won-blocks/farmer-won-blocks.component.html
+++ b/src/app/farmer-won-blocks/farmer-won-blocks.component.html
@@ -38,8 +38,8 @@
           </tr>
           <tr *ngFor="let block of wonBlocksObservable | async | slice: (page - 1) * pageSize : page * pageSize; trackBy: trackBlockByHash">
             <td>{{getBlockDate(block)}}</td>
-            <td *ngIf="poolConfig.blockExplorerBlockUrlTemplate"><a href="{{getBlockExplorerBlockLink(block)}}" target="_blank" style="color: #b45bff">{{block.height}}</a></td>
-            <td *ngIf="!poolConfig.blockExplorerBlockUrlTemplate">{{block.height}}</td>
+            <td *ngIf="(statsService.poolConfig$ | async)?.blockExplorerBlockUrlTemplate"><a href="{{getBlockExplorerBlockLink(block)}}" target="_blank" style="color: #b45bff">{{block.height}}</a></td>
+            <td *ngIf="!(statsService.poolConfig$ | async)?.blockExplorerBlockUrlTemplate">{{block.height}}</td>
             <td><span [class]="getEffortColor(block)">{{getBlockEffort(block)}}</span></td>
             <td *ngIf="block.remarks === undefined || block.remarks.length === 0">
               <span class="badge remark-pill background-color-light-green">OK</span>
