--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-xl navbar-dark sticky-navbar">
   <a class="navbar-brand text-decoration-none">
-    <img src="https://static.foxypool.io/assets/icon/fox.svg" width="34" height="34" alt="">
+    <img ngSrc="https://static.foxypool.io/assets/icon/fox.svg" width="34" height="34" alt="">
     <span class="pool-title">{{poolTitle}}</span>
   </a>
   <button class="navbar-toggler" type="button" (click)="toggleMenuCollapse()">
@@ -50,21 +50,14 @@
           </button>
         </a>
       </li>
-      <li class="nav-item" *ngIf="poolConfig.supportsFaucet">
-        <a class="nav-link">
-          <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/faucet" routerLinkActive="active" (click)="onTabButtonClick()">
-            {{snippetService.getSnippet('header-component.button.faucet')}}
-          </button>
-        </a>
-      </li>
-      <li class="nav-item" *ngIf="poolConfig.notices && poolConfig.notices.length > 0">
+      <li class="nav-item" *ngIf="(statsService.poolConfig$ | async)?.notices.length > 0">
         <a class="nav-link">
           <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/notices" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.notices')}}
           </button>
         </a>
       </li>
-      <li class="nav-item" *ngIf="poolStats.events && poolStats.events.length > 0">
+      <li class="nav-item" *ngIf="(statsService.poolStats$ | async)?.events.length > 0">
         <a class="nav-link">
           <button type="button" class="btn btn-outline-primary no-wrap" routerLink="/events" routerLinkActive="active" (click)="onTabButtonClick()">
             {{snippetService.getSnippet('header-component.button.events')}}
