--- a/src/app/stats-card/stats-card.component.html
+++ b/src/app/stats-card/stats-card.component.html
@@ -12,8 +12,8 @@
       </div>
       <div class="card-body card-body-large">
         <span class="card-text card-text-large">
-          <span *ngIf="!rewardStatsLoading && !poolStatsLoading && !accountStatsLoading" [class]="getEffortColor(currentEffort)">{{currentEffortFormatted}}</span>
-          <app-loading-state *ngIf="rewardStatsLoading || poolStatsLoading || accountStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
+          <span *ngIf="!areRewardStatsLoading && !arePoolStatsLoading && !areAccountStatsLoading" [class]="getEffortColor(currentEffort)">{{currentEffortFormatted}}</span>
+          <app-loading-state *ngIf="areRewardStatsLoading || arePoolStatsLoading || areAccountStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
         </span>
       </div>
     </div>
@@ -31,8 +31,8 @@
       </div>
       <div class="card-body card-body-large">
         <span class="card-text card-text-large">
-          <span *ngIf="!rewardStatsLoading" [class]="getEffortColor(averageEffort)">{{averageEffortFormatted}}</span>
-          <app-loading-state *ngIf="rewardStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
+          <span *ngIf="!areRewardStatsLoading" [class]="getEffortColor(averageEffort)">{{averageEffortFormatted}}</span>
+          <app-loading-state *ngIf="areRewardStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
         </span>
       </div>
     </div>
@@ -50,8 +50,8 @@
       </div>
       <div class="card-body card-body-large">
         <span class="card-text card-text-large">
-          <span *ngIf="!rewardStatsLoading && !poolConfigLoading" placement="bottom" ngbTooltip="{{ratesService.getValuesInFiatFormatted(dailyRewardPerPiB)}} / PiB">{{dailyRewardPerPiBFormatted}} {{poolConfig.ticker}} / PiB</span>
-          <app-loading-state *ngIf="rewardStatsLoading || poolConfigLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
+          <span *ngIf="!areRewardStatsLoading && !isPoolConfigLoading" placement="bottom" ngbTooltip="{{ratesService.getValuesInFiatFormatted(dailyRewardPerPiB)}} / PiB">{{dailyRewardPerPiBFormatted}} {{statsService.ticker$ | async}} / PiB</span>
+          <app-loading-state *ngIf="areRewardStatsLoading || isPoolConfigLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
         </span>
       </div>
     </div>
@@ -63,8 +63,8 @@
       </div>
       <div class="card-body card-body-large">
         <span class="card-text card-text-large">
-          <span *ngIf="!accountStatsLoading">{{accountStats.accountsWithShares}}</span>
-          <app-loading-state *ngIf="accountStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
+          <span *ngIf="!areAccountStatsLoading">{{(statsService.accountStats$ | async)?.accountsWithShares ?? 0}}</span>
+          <app-loading-state *ngIf="areAccountStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
         </span>
       </div>
     </div>
@@ -76,8 +76,8 @@
       </div>
       <div class="card-body card-body-large">
         <span class="card-text card-text-large">
-          <span *ngIf="!accountStatsLoading">{{getFormattedCapacityFromGiB(accountStats.ecSum || 0)}}</span>
-          <app-loading-state *ngIf="accountStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
+          <span *ngIf="!areAccountStatsLoading">{{getFormattedCapacityFromGiB((statsService.accountStats$ | async)?.ecSum ?? 0)}}</span>
+          <app-loading-state *ngIf="areAccountStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
         </span>
       </div>
     </div>
@@ -89,8 +89,8 @@
       </div>
       <div class="card-body card-body-large">
         <span class="card-text card-text-large">
-          <span *ngIf="!poolStatsLoading">{{poolStats.height ? poolStats.height : snippetService.getSnippet('general.not-available.short')}}</span>
-          <app-loading-state *ngIf="poolStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
+          <span *ngIf="!arePoolStatsLoading">{{heightInfo$ | async}}</span>
+          <app-loading-state *ngIf="arePoolStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
         </span>
       </div>
     </div>
@@ -102,8 +102,8 @@
       </div>
       <div class="card-body card-body-large">
         <span class="card-text card-text-large">
-          <span *ngIf="!poolStatsLoading">{{getFormattedCapacityFromTiB(networkSpaceInTiB)}}</span>
-           <app-loading-state *ngIf="poolStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
+          <span *ngIf="!arePoolStatsLoading">{{getFormattedCapacityFromTiB(networkSpaceInTiB)}}</span>
+           <app-loading-state *ngIf="arePoolStatsLoading" [height]="2" [width]="2" fontSize="14px"></app-loading-state>
         </span>
       </div>
     </div>
