--- a/src/app/authentication-modal/authentication-modal.component.html
+++ b/src/app/authentication-modal/authentication-modal.component.html
@@ -1,7 +1,7 @@
-<ng-template #authenticationModal let-modal>
+<ng-template #authenticationModal let-dismiss="dismiss">
   <div class="modal-header">
     <h4 class="modal-title" style="color: #474747">{{snippetService.getSnippet('authentication-modal.title')}}</h4>
-    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+    <button type="button" class="btn-close" aria-label="Close" (click)="dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
     <div class="row">
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('cancel')">{{snippetService.getSnippet('general.cancel')}}</button>
+    <button type="button" class="btn btn-outline-secondary" (click)="dismiss('cancel')">{{snippetService.getSnippet('general.cancel')}}</button>
     <button type="button" class="btn btn-success" (click)="authenticate()" [disabled]="accountService.isAuthenticating || !signature">
       <span *ngIf="accountService.isAuthenticating">{{snippetService.getSnippet('authentication-modal.authenticating')}}</span>
       <span *ngIf="!accountService.isAuthenticating">{{snippetService.getSnippet('authentication-modal.authenticate')}}</span>
